# plugins/adme/ADME/Controllers/SearchController.cs
@@ -11,7 +11,6 @@ namespace ADME.Controllers;
 [Authorize]
 [ApiVersion("0.1")]
 [Route("api/v{version:apiVersion}/[controller]")]
-[Route("api/[controller]")]
 [ApiController]
 [Produces("application/json")]
 public class SearchController : ControllerBase
@@ -32,8 +31,8 @@ public class SearchController : ControllerBase
     /// <param name="filter"></param>
     /// <param name="cts"></param>
     /// <returns></returns>
-    [ApiVersion("0.2")]
-    [Authorize(Policy = "ReadAccess")]
+    [ApiVersion("0.1")]
+    //[Authorize(Policy = "ReadAccess")]
     [HttpGet("{parm}", Name = "Search")]
     public async Task<ActionResult<SearchResult>> Search(string parm,
         [FromQuery] SearchFilters filter, [FromQuery] CancellationToken cts)
@@ -49,6 +48,7 @@ public class SearchController : ControllerBase
     /// <param name="key">Use encoded metadata_storage_path</param>
     /// <returns></returns>
     [HttpGet("get_by_key", Name = "GetDocumentByKey")]
+    [Authorize(Policy = "ReadAccess")]
     [ProducesResponseType(StatusCodes.Status200OK)]
     [ProducesResponseType(StatusCodes.Status404NotFound)]
     [ProducesDefaultResponseType]
