# plugins/adme/ADME/openapi_ai.json
@@ -3,10 +3,10 @@
   "info": {
     "title": "OSDU Copilot Plugin",
     "description": "This is the OSDU plugin for Copilot",
-    "version": "0.2"
+    "version": "0.1"
   },
   "paths": {
-    "/api/search/{parm}": {
+    "/api/v0.1/search/{parm}": {
       "get": {
         "tags": [
           "Search"
@@ -152,8 +152,8 @@
         "type": "oauth2",
         "flows": {
           "authorizationCode": {
-            "authorizationUrl": "https://login.microsoftonline.com/3aa4a235-b6e2-48d5-9195-7fcf05b459b0/oauth2/v2.0/authorize",
-            "tokenUrl": "https://login.microsoftonline.com/3aa4a235-b6e2-48d5-9195-7fcf05b459b0/oauth2/v2.0/token",
+            "authorizationUrl": "https://login.microsoftonline.com/d8df4cd9-7324-4597-8feb-c50e9d11c96b/oauth2/v2.0/authorize",
+            "tokenUrl": "https://login.microsoftonline.com/d8df4cd9-7324-4597-8feb-c50e9d11c96b/oauth2/v2.0/token",
             "scopes": {
               "api://4ad01fea-bb1f-4529-b952-d70603b10382/access_as_user": "Access the API"
             }
